[gd_scene load_steps=4 format=3 uid="uid://bu4ry4aasqi7x"]

[ext_resource type="Script" uid="uid://ci0ymfjaggav3" path="res://Scripts/main_menu.gd" id="1_tt5f1"]
[ext_resource type="Texture2D" uid="uid://bfw21vtchggq0" path="res://Textures/exit strat.png" id="2_8saeu"]
[ext_resource type="AudioStream" uid="uid://do6st2vkxu6d" path="res://audio/ambience_main_menu.mp3" id="3_8saeu"]

[node name="MainMenu" type="Control"]
custom_minimum_size = Vector2(1920, 1080)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_tt5f1")
metadata/__editor_changed = true

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0120333, 0.0150427, 0.0150427, 1)

[node name="ExitStrat" type="Sprite2D" parent="."]
position = Vector2(960.5, 538.75)
scale = Vector2(1.6687, 1.66795)
texture = ExtResource("2_8saeu")

[node name="Title" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -429.0
offset_right = 430.0
offset_bottom = 193.0
grow_horizontal = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 10
theme_override_constants/shadow_offset_y = 10
theme_override_constants/outline_size = 25
theme_override_constants/shadow_outline_size = 15
theme_override_font_sizes/font_size = 140
text = "Exit Strategy"

[node name="MenuContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -72.0
offset_top = -76.0
offset_right = 239.0
offset_bottom = 60.0
grow_horizontal = 2
grow_vertical = 2

[node name="StartButton" type="Button" parent="MenuContainer"]
layout_mode = 2
tooltip_text = "Start the game"
text = "Start"

[node name="ContinueButton" type="Button" parent="MenuContainer"]
layout_mode = 2
tooltip_text = "Continue where you left off"
text = "Continue"

[node name="SettingsButton" type="Button" parent="MenuContainer"]
layout_mode = 2
tooltip_text = "Configure settings"
text = "Settings"

[node name="QuitButton" type="Button" parent="MenuContainer"]
layout_mode = 2
tooltip_text = "Quit game"
text = "Quit Game"

[node name="AmbientAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_8saeu")
autoplay = true
